fix unclickable theme toggle on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -374,6 +374,8 @@ form button:active {
     position: fixed;
     bottom: 0.5em;
     right: 1em;
+    z-index: 1000;
+    touch-action: manipulation;
 }
 
 .theme-svg:hover {
